# gold-nugget-extractor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/gold_nugget_extractor/: __init__.py  agent.py  index.py  nuggets.py  state.py
