[project]
name = "gold-nugget-extractor"
version = "0.1.0"
description = "Extract gold nuggets of knowledge from books using OpenAI Agents SDK and OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.5",
    "openai-agents>=0.12.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
gold-nugget-extractor = "gold_nugget_extractor:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/gold_nugget_extractor"]
